2007-06-19  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-memory.c (syx_memory_load_image): fixed
	
	* syx/syx-platform.h: added
	
	* syx/syx-enums.h (SyxVariables): added Metaclass instanceClass
	
	* Smalltalk: added tracebacks and other stuff

2007-06-18  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-parser.c (_syx_parser_parse_term): added negation

	* syx/syx-lexer.c (_syx_lexer_token_number): added radix numbers

	* Done a refactoring to use pointers instead of indexes for oops
	

2007-06-17  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-primitives.c (Signal_findHandlerContext): fixed

	* syx/syx-error.h (syx_debug): added

	* syx/syx-utils.c (syx_send_message): added

2007-06-15  Luca Bruno  <lethalman88@gmail.com>

	* Added floats

	* syx/syx-memory.c (syx_memory_load_image): do not add extra byte for strings
	(strndup): added if missing in other environments
	(memdup): same

	* SConstruct: added various options and organized for a better debugging

	* syx/syx-object.c (syx_string_new): add 1 to the size to hold NULL char
	(syx_symbol_new): same

	* syx/syx-interp.c (syx_interp_mark_arguments): do not alloc if not arguments are given.
	Fixed memory leaks.
	Do not pass the execution state trough parameters, instead keep it global.
	This would produce a better C/Smalltalk interface

	* st/kernel/ObjectMemory.st: adjusted
	
	* st/kernel/SystemDictionary.st (quit:): added with relative primitive

	* syx/syx-error.c: added
	
	* st/kernel/String.st (size): subtract 1 whith is the NULL char

2007-06-14  Luca Bruno  <lethalman88@gmail.com>

	* Removed Glib dependency

	* Removed autotools replaced with Scons build system

2007-06-13  Luca Bruno  <lethalman88@gmail.com>

	* Just work on Windows using MinGW

	* syx/syx-interp.c (syx_interp_send_message): if the message is unary don't create an empty array
	(syx_interp_send_super): same
	(syx_interp_send_unary): same

	* syx/syx-parser.h (struct SyxParser): renamed with starting _
